--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <title>Terrariums</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <nav class='navbar navbar-default navbar-fixed-top'>
+  <nav class='navbar navbar-inverse navbar-fixed-top'>
     <div class='container-fluid'>
       <div class='navbar-header'>
         <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#myNavbar'>
@@ -43,5 +45,20 @@
       </div>
     </div>
   </nav>
+  <div class="container-fluid">
+  <div class="introphoto">
+  </div>
+  <div class="row">
+    <h1>I'm going to put a photo thing here.</h1>
+  </div>
+  <div class='row'>
+    <div class="col-md-4">
+      <h1>I'm going to put info here</h1>
+    </div>
+    <div class="col-md-8">
+      <h1>I'll put a blog roll here</h1>
+    </div>
+  </div>
+</div>
 </body>
 </html>
