--- a/index.html
+++ b/index.html
@@ -48,17 +48,41 @@
   <div class="container-fluid">
   <div class="introphoto">
   </div>
-  <div class="row">
-    <h1>I'm going to put a photo thing here.</h1>
+  <div class="row text-center">
   </div>
-  <div class='row'>
-    <div class="col-md-4">
-      <h1>I'm going to put info here</h1>
-    </div>
-    <div class="col-md-8">
-      <h1>I'll put a blog roll here</h1>
+  <br>
+  <br>
+  <div class='row text-center'>
+      <div id="lightbox">
+      <h1>Terrariums</h1>
+      <h4>Check out some awesome terrariums</h4>
+      <ul class="list-unstyled">
+        <li>
+          <div id="img1" class='col-md-3 col-sm-3 col-xs-12 text-center'>
+              <h5>Terrarium</h5>
+          </div>
+        </li>
+        <li>
+          <div id="img2" class='col-md-3 col-sm-3 col-xs-12 text-center'>
+              <h5>A Succulent Terrarium</h5>
+            </div>
+        </li>
+        <li>
+          <div id="img3" class='col-md-3 col-sm-3 col-xs-12 text-center'>
+              <h5>A Succulent Terrarium</h5>
+          </div>
+        </li>
+        <li>
+          <div id="img4" class='col-md-3 col-sm-3 col-xs-12 text-center'>
+            <h5> Yet Another Succulent Terrarium</h5>
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
+  <br>
+  <br>
+  <br>
 </div>
 </body>
 </html>
