Fix column spacing for lightbox.

--- a/index.html
+++ b/index.html
@@ -56,26 +56,26 @@
       <div id="lightbox">
       <h1>Terrariums</h1>
       <h4>Check out some awesome terrariums</h4>
-      <ul class="list-unstyled">
+      <ul class="list-unstyled list-inline">
         <li>
-          <div id="img1" class='col-md-3 col-sm-3 col-xs-12 text-center'>
-              <h5>Terrarium</h5>
-          </div>
+        <div class='col-md-6 col-sm-6 terrarium-img text-center'>
+            <h5>Terrarium</h5>
+        </div>
         </li>
         <li>
-          <div id="img2" class='col-md-3 col-sm-3 col-xs-12 text-center'>
-              <h5>A Succulent Terrarium</h5>
-            </div>
+        <div class='col-md-6 col-sm-6 terrarium-img text-center'>
+            <h5>Terrarium</h5>
+        </div>
         </li>
         <li>
-          <div id="img3" class='col-md-3 col-sm-3 col-xs-12 text-center'>
-              <h5>A Succulent Terrarium</h5>
-          </div>
+        <div class='col-md-6 col-sm-6 terrarium-img text-center'>
+            <h5>Terrarium</h5>
+        </div>
         </li>
         <li>
-          <div id="img4" class='col-md-3 col-sm-3 col-xs-12 text-center'>
-            <h5> Yet Another Succulent Terrarium</h5>
-          </div>
+        <div class='col-md-6 col-sm-6 terrarium-img text-center'>
+            <h5>Terrarium</h5>
+        </div>
         </li>
       </ul>
     </div>
