--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class='collapse navbar-collapse' id='myNavbar'>
         <ul class='nav navbar-nav'>
-          <li><a href='#photos'>Photos</a></li>
+          <li><a href='#lightbox'>Photos</a></li>
           <li><a href='#info'>Info</a></li>
         </ul>
         <ul class='nav navbar-nav navbar-right'>
@@ -48,33 +48,43 @@
   <div class="container-fluid">
   <div class="introphoto">
   </div>
-  <div class="row text-center">
+  <div class="row">
+    <br>
+    <br>
+    <br>
+    <div class="col-md-10 col-md-offset-1">
+    <h2>
+      Dandelion cucumber earthnut pea peanut soko zucchini.
+    </h2>
+    <br>
+    <h4>fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea</h4>
+    <br>
+    <p>
+      Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke.
+    </p>
   </div>
+</div>
+  <br>
+  <br>
   <br>
   <br>
   <div class='row text-center'>
       <div id="lightbox">
-      <h1>Terrariums</h1>
-      <h4>Check out some awesome terrariums</h4>
       <ul class="list-unstyled list-inline">
         <li>
-        <div class='col-md-6 col-sm-6 terrarium-img text-center'>
-            <h5>Terrarium</h5>
+        <div id="terrarium-img1" class='col-md-6 text-center'>
         </div>
         </li>
         <li>
-        <div class='col-md-6 col-sm-6 terrarium-img text-center'>
-            <h5>Terrarium</h5>
+        <div id="terrarium-img2" class='col-md-6 text-center'>
         </div>
         </li>
         <li>
-        <div class='col-md-6 col-sm-6 terrarium-img text-center'>
-            <h5>Terrarium</h5>
+        <div id="terrarium-img3" class='col-md-6 text-center'>
         </div>
         </li>
         <li>
-        <div class='col-md-6 col-sm-6 terrarium-img text-center'>
-            <h5>Terrarium</h5>
+        <div id="terrarium-img4" class='col-md-6 text-center'>
         </div>
         </li>
       </ul>
